<resources>
    <string name="app_name">Insects in Order</string>
    <string name="title">Insects in Order</string>
    <string name="titleInfo">Information about application</string>
    <string name="agree">AGREE</string>
    <string name="option_a">option a</string>
    <string name="option_b">option b</string>
    <string name="identification">Identification</string>
    <string name="my_insects">My Insects</string>
    <string name="credits">Credits</string>
    <string name="Privacy_Policy">PRIVACY POLICY</string>
    <string name="Privacy_Policy_INFO">
        <![CDATA[<div style="text-align: justify;">
        <h1>PRIVACY POLICY</h1>

		<p>The Municipality of Figueira de Castelo Rodrigo and, in particular, the Open Science Platform (PCA-MFCR) project are responsible for the site online <a href="https://www.plataforma.edu.pt/"> plataforma.edu.pt</a> and, therefore, undertake to guarantee the privacy of the personal data collected and / or transmitted online. The security and privacy of the data of the visitors of the site platform.edu.pt are aspects that are of crucial importance, reserving the right to change the privacy policy, so it is advisable to read this document regularly. These texts reproduce the privacy policy followed by us.</p>

		<p>Below you will find specific information on the following points:</p>

		<ol>
		  <li>What information is collected?</li>
            <br></br>
		  <li>Who is responsible for collecting information?</li>
            <br></br>
		  <li> How is the information collected used?</li>
            <br></br>
		  <li>What security procedures does the online site plataforma.edu.pt, which guarantee the user the protection of your data against unauthorized access, alteration or destruction?</li>
            <br></br>
		  <li>In what way can the user update or delete the information he / she has previously provided through the site plataforma.edu.pt?</li>
            <br></br>
		  <li>Other issues you should know about the privacy policy.</li>
		</ol>


		<p>If you have any questions about the points presented here, please contact us at info@plataforma.edu.pt.</p>

		    <p>1)What information is collected?</p>

		<p>For the most varied purposes, there are some forms on the site platform.edu.pt that request personal data. The information collected is necessary to ensure the identity of the user and the proper functioning of the activities and objectives that they propose. The information that the user has for the purpose of providing a service more appropriate to its characteristics and needs and sending information related to the use of the services provided by PCA-MFCR. The user may update the information provided by him, whenever he wishes, by sending an email to info@plataforma.edu.pt, with the subject "Updating of Personal Data".</p>

		    <p>2) Who is responsible for collecting information?</p>

		<p>PCA-MFCR is solely responsible for the collection of personal data made on the site platform.edu.pt.</p>

		    <p>3) How is the information collected used?</p>

		<p>The information collected will serve only the following purposes:</p>

			<ul>
				<li>- the compilation of statistics to show how PCA-MFCR can improve the level of services it provides and, in this way, respond more effectively to users expectations;</li>
                <br></br>
				<li>- increase the level of customization of services to suit the tastes and preferences of users as much as possible.</li>
			</ul>

		<p>The personal data provided by the user will be used exclusively for purposes related to the execution of its purpose, as well as, if the user so authorizes, for information / dissemination activities.</p>

		<p>PCA-MFCR will not sell, rent, share or offer data provided by the users of the site onlne plataforma.edu.pt, except in the situations set forth in this privacy policy.</p>

		    <p>4) What security procedures does the online site plataforma.edu.pt, which guarantee the user the protection of your data against unauthorized access, alteration or destruction?</p>

		<p>PCA-MFCR takes all necessary and legally required precautions to ensure the protection of the information collected from its users through the platform.edu.pt site and its applications. These precautions ensure online and offline security of this information.</p>

		    <p>5) In what way can the user update or delete the information he / she has previously provided through the site plataforma.edu.pt?</p>

		<p>In the context of the conditions of use of the site platform.edu.pt online and all its services, the user undertakes to provide and keep updated and true all their personal data. In turn, PCA-MFCR guarantees the user the possibility of updating or deleting their data. To update or delete your data you should send an email to info@plataforma.edu.pt, with the subject "Update of Personal Data" or "Elimination of Personal Data".</p>

		    <p>6) Other issues you should know about the privacy policy.</p>

		<ul>
  			<li>Links (external)</li>

			<p>The site platform.edu.pt contains links to other websites. PCA-MFCR is not responsible for the privacy policies of these same websites. It is recommended to the users of the site platform.edu.pt that, when they access other electronic sites, consult the pages that, within these sites, refer to their privacy policies. This text only refers to the privacy policy applicable to the site platform.edu.pt.</p>

  			<li>Change of Conditions of Use of the site online at platform.edu.pt</li>

  			<p>Whenever there is a change in the conditions of use of the site platform.edu.pt online, namely in the Terms of Service or in the Privacy Policy, PCA-MFCR will notify registered users.</p>

		 	<li>Authorization for Miscellaneous Uses</li>

		<p>If PCA-MFCR intends to use the data of users of its online site for purposes other than those for which it received initial authorization from users, it will request a new authorization from users for that specific use.</p>

		<p>If you have any questions about the points presented here, please contact us at info@plataforma.edu.pt.</p>
		</ul>
		</div>]]>
    </string>
    <string name="save_and_quit">Save on my insects</string>
    <string name="quit_without_saving">Exit without Saving</string>
    <string name="send_email">Submit sighting</string>
    <string name="correct_order">Correct insect order</string>
    <string name="delete_insect">Delete insect</string>
    <string name="cancel">Cancel</string>
    <string name="moreinfo">More information</string>
</resources>