<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/idmoreinfo"
        android:enabled="true"
        android:title="@string/moreinfo"
        android:visible="true"
        app:showAsAction="withText" />
    <item
        android:id="@+id/idorder"
        android:enabled="true"
        android:title="@string/correct_order"
        android:visible="true"
        app:showAsAction="withText" />
    <item
        android:id="@+id/idsend"
        android:enabled="true"
        android:title="@string/send_email"
        android:visible="true" />
    <item
        android:id="@+id/iddelete"
        android:enabled="true"
        android:title="@string/delete_insect"
        android:visible="true" />
    <item
        android:id="@+id/idcancel"
        android:enabled="true"
        android:title="@string/cancel"
        android:visible="true" />
</menu>